Alterado a fonte do hero h1 para Open Sans

--- a/home.css
+++ b/home.css
@@ -69,7 +69,7 @@ nav {
 }
 
 .hero h1 {
-    font-family: 'Oswald', sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 3rem;
     margin-bottom: 1rem;
 }
