--- a/home.css
+++ b/home.css
@@ -86,7 +86,7 @@ nav {
 }
 
 .models h2 {
-    font-family: 'Oswald', sans-serif;
+    font-family: "Open Sans", sans-serif;
     text-align: center;
     font-size: 2.5rem;
     color: #0066b1;
