Alterado a fonte de Oswald para Open Sans

--- a/home.css
+++ b/home.css
@@ -118,7 +118,7 @@ nav {
 }
 
 .model-card h3 {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     padding: 1rem 1rem 0;
     color: #0066b1;
 }
